# php-discovery

./: Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
examples/: debug.rs  list.rs
src/: build.rs  discovery.rs  error.rs  lib.rs  utils.rs
