[package]
name = "php-discovery"
version = "0.1.0"
edition = "2021"
description = "discover available PHP binaries in locale system."
readme = "README.md"
repository = "https://github.com/azjezz/php-discovery"
documentation = "https://docs.rs/php-discovery"
homepage = "https://github.com/azjezz/php-discovery"
keywords = ["php", "discovery", "store", "finder"]
exclude = ["/.github/*"]
authors = ["Saif Eddin Gmati <azjezz@protonmail.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
regex = "1.7.0"
is_executable = "1.0.1"
lazy_static = "1.4.0"
